--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -13,8 +13,8 @@
   --ifm-color-primary-light: #16b1e3;
   --ifm-color-primary-lighter: #17b9ed;
   --ifm-color-primary-lightest: #29c5f0;
-  --ifm-background-color: #efefef;
-  --ifm-background-surface-color: #efefef;
+  --ifm-background-color: #f8f9fa;
+  --ifm-background-surface-color: #ffffff;
   --ifm-navbar-background-color: #ffffff;
   --ifm-footer-background-color: #242526;
   --ifm-code-font-size: 95%;
